--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h2>Learning Git</h2>
+    <p>Hello World, I am learning Git. This is my first time. I am very excited about this. </p>
+    <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
