--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Learning</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>Learning Git</h2>
@@ -13,5 +14,8 @@
         <li>About Us</li>
         <li>Contact Us</li>
     </ul>
+    <footer>
+        <p>Copyright &copy; 2024</p>
+    </footer>
 </body>
 </html>
